# native

./: .gitignore  CHANGELOG.md  LICENSE  README.md  all.rust  all.text  bugs.md  importmap.json  jsconfig.json  package-lock.json  package.json  server.js  suggestions.md  web-test-runner.config.mjs
blog/: app.js  index.css  index.html
docs/: all.md  definition.md  library.md  library2.md  plan.md
docs/approach/: definition.md  phases.md  props.md  state.md  template.md  tooling.md
docs/elements/: index.md
docs/notes/: 01 - Architecture.md  02 - Architecture — Volume 2.md  03 - Native CSS Architecture.md  04 - Web Components.md  05 - Native UI Primitives.md  06 - Rendering.md  07 - Reactivity.md  08 - State Management.md  09 - Routing.md  10 - Event Architecture.md  11 - Networking.md  12 - Performance.md  13 - Offline and Background.md  14 - Memory Management.md  15 - Security Architecture.md  16 - Native Platform Capabilities.md  17 - Browser API.md  18 - Limitations, Browser Gaps, and Polyfill Strategy.md  19 - Browser Runtime Model.md  20 - Internal API.md  21 - Worker Architecture.md  22 - Storage Architecture.md  23 - Media Codes.md  (+3 more)
scripts/: bun.js  esbuild.mjs
src/: index.js
tests/: README.md  setup.js
tools/: Cargo.toml
tools/src/: main.rs
tools/src/extract/: html.rs  mod.rs  runner.rs
tools/src/logs/: Cargo.toml
tools/src/logs/src/: fmt.rs  lib.rs
tools/src/server/: mod.rs  runner.rs
tools/src/types/: mod.rs  runner.rs
tools/src/watcher/: mod.rs  runner.rs
types/: index.d.ts
usages/: core.md  elements.md  index.md  server.md
(+272 files in other folders)
