[package]
name = "native-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6.11", features = ["fs", "cors", "set-status"] }
notify = "8.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
walkdir = "2.4"
swc_common = { version = "22.0.0", features = ["concurrent"] }
swc_ecma_parser = "40.0.0"
swc_ecma_ast = "24.0.0"
swc_ecma_visit = "24.0.0"
logs = { path = "src/logs" }

